# learning-rust

./: Cargo.toml  my_database.db
database/sqlite/: conn.rs
migrations/: V1__create_products_table.sql
src/: main.rs
src/pkg/database/: conn.rs
src/pkg/server/: mod.rs  routes.rs  serve.rs
src/product/: handler.rs  product.rs
